syntax = "proto2";
package packet;
enum MsgType //枚举消息类型
{
    ZOOKEEPER = 0;
    METADATA = 1;
    OTHER = 2;
}
enum OperationId
{
    EXISTS = 0;
    CREATE = 1;
    DELETE = 2;
    WRITE = 3;
    READ = 4;
}
message Header{
    required MsgType  type = 1;
}
message ZkBody{
    required OperationId opt = 1;
    required int32  ret = 2;
    required string path = 3;
    required bytes  data = 4;
    required int32  flag = 5;
    required int32  acl = 6;

}
message ZkResponseBody{
    required int32  retcode = 1;
    required string errmsg = 2;
    required bytes  data = 3;
}
message QueryBody{
       optional int32  querytype = 1;
       optional int32  retcode = 2;
       optional int64  costtime = 3;
       optional string sqlstring = 4;
       optional int64  starttime = 5;
       optional string clientcomputername = 6;
       optional string clientappname = 7;
       optional string clientipaddress = 8;
       optional int64  clientport = 9;
       optional string qid = 10;
       optional int64  txnID = 11;
       optional string username = 12;
       optional int32  dialogueid = 13;

}
message MdBody{
    required string mxosrvrname =1;
    required int32 pid =2;
    optional int32  sqlcount = 3;
    optional int64  totalruntime = 4;
    optional int32  totalconnections = 5;
    optional int32  withquery =6;
    optional QueryBody querybody = 7;
    optional string  hostname = 8;
}
message MdResponseBody{
    required int32  retcode = 1;
    required string errmsg = 2;
    required bytes  data = 3;
}
message Message{
    required Header header = 1;
    optional MdBody mdbody = 2;
    optional ZkBody zkbody = 3;
}

message MdsReponse{
    required Header header = 1;
    required ZkResponseBody zkbody = 2;
    required MdResponseBody mdbody = 3;
}
